added more intuitive user experience

--- a/index.html
+++ b/index.html
@@ -213,6 +213,7 @@ https://templatemo.com/tm-528-elegance
                                     </div>
                                 </div>
                             </div>
+                            <p>Drag or Click carousel for more skills</p>
                         </div>
                     </div>
                 </div>
@@ -234,8 +235,8 @@ https://templatemo.com/tm-528-elegance
                                                 <img src="images/beatscloud.PNG" style="background-size: cover;" alt="">
                                             </div>
                                             <div class="thumb-inner animate" data-animate="fadeInUp">
-                                                <h4 style="color: black;"><a href="https://beatscloud.herokuapp.com/" style="color: black; font-size: 20px;" target="_blank">Beatscloud</a></h4>
-                                                <p>SoundCloud clone for users to express themselves through uploading their own music and creating a community by commenting on songs. <a href="https://github.com/VernyoonChao98/BeatsCloud" style="color: black; font-size: 20px;" target="_blank">Github Repo</a></p>
+                                                <h4 style="color: black;"><a href="https://beatscloud.herokuapp.com/" style="color: black; font-size: 20px; text-decoration: underline;" target="_blank">Beatscloud<span style="font-size: 10px;">(Live Link)</span></a></h4>
+                                                <p>SoundCloud clone for users to express themselves through uploading their own music and creating a community by commenting on songs. <a href="https://github.com/VernyoonChao98/BeatsCloud" style="color: black; font-size: 20px; text-decoration: underline;" target="_blank">Github Repo</a></p>
                                             </div>
                                         </div>
                                     </div>
@@ -245,8 +246,8 @@ https://templatemo.com/tm-528-elegance
                                                 <img src="images/komication.PNG" alt="">
                                             </div>
                                             <div class="thumb-inner animate" data-animate="fadeInUp">
-                                                <h4 style="color: black;"><a href="https://komication.herokuapp.com/" style="color: black; font-size: 20px;" target="_blank">Komication</a></h4>
-                                                <p>Discord clone for users to communicate with one another and create a community. <a href="https://github.com/arasargsyan0622/Komication" style="color: black; font-size: 20px;" target="_blank">Github Repo</a></p>
+                                                <h4 style="color: black;"><a href="https://komication.herokuapp.com/" style="color: black; font-size: 20px; text-decoration: underline;" target="_blank">Komication<span style="font-size: 10px;">(Live Link)</span></a></h4>
+                                                <p>Discord clone for users to communicate with one another and create a community. <a href="https://github.com/arasargsyan0622/Komication" style="color: black; font-size: 20px; text-decoration: underline;" target="_blank">Github Repo</a></p>
                                             </div>
                                         </div>
                                     </div>
@@ -256,12 +257,13 @@ https://templatemo.com/tm-528-elegance
                                                 <img src="images/friendbook.PNG" alt="">
                                             </div>
                                             <div class="thumb-inner animate" data-animate="fadeInUp">
-                                                <h4 style="color: black;"><a href="https://thefriendbook.herokuapp.com/" style="color: black; font-size: 20px;" target="_blank">Friendbook</a></h4>
-                                                <p>Facebook clone where users can come interact with other users to create new friends. <a href="https://github.com/VernyoonChao98/FriendBook" style="color: black; font-size: 20px;" target="_blank">Github Repo</a></p>
+                                                <h4 style="color: black;"><a href="https://thefriendbook.herokuapp.com/" style="color: black; font-size: 20px; text-decoration: underline;" target="_blank">Friendbook<span style="font-size: 10px;">(Live Link)</span></a></h4>
+                                                <p>Facebook clone where users can come interact with other users to create new friends. <a href="https://github.com/VernyoonChao98/FriendBook" style="color: black; font-size: 20px; text-decoration: underline;" target="_blank">Github Repo</a></p>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
+                                <p>Hover over project for more details</p>
                             </div>
                         </div>
                     </div>
